--- a/_posts/2018-10-25-the-4255-wave.md
+++ b/_posts/2018-10-25-the-4255-wave.md
@@ -1,13 +1,13 @@
 ---
 layout: conversations-single
 title: The 4255 Wave
-author: Augustine Ogwo
+author_name: Augustine Ogwo
 author_image: "/uploads/people/austine1.jpg" 
 featured_image: '/uploads/blog/the-4255-wave.png'
 excerpt: "It was yet another beautiful weekend in the treasure base of the nation. New G.R.A Port Harcourt comes alive from Friday evenings till Sunday mornings"
 tag: [PRESS RELEASE]
 color: '#C4702E'
-permalink: /conversations/:title/
+permalink: /blog/:title/
 breadcrumb: The 4255 Wave
 comments: true
 ---
